# rfe

./: LICENSE  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: test-build.yml
docs/: project-design.md
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/rfe_directory/: mod.rs  read_directory.rs
src-tauri/src/utils/: devices.rs
src/routes/: +layout.svelte  +page.svelte  Header.svelte  Sidebar.svelte  Tab.svelte
src/routes/rfe-directory/: Columns.svelte
src/routes/stores/: tabs.ts
